--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ coverage.xml
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+others
 
 # Flask stuff:
 instance/
@@ -104,11 +105,14 @@ celerybeat.pid
 # Environments
 .env
 .venv
+.vscode
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+db_env/
+
 
 # Spyder project settings
 .spyderproject
